--- a/MultiTool.Core.csproj
+++ b/MultiTool.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,7 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Calculations\" />
+    <Folder Include="Config\Calculations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WeatherModels\MultiTool.Models.csproj" />
   </ItemGroup>
 
 </Project>
