--- a/MultiTool.Core/appsettings.json
+++ b/MultiTool.Core/appsettings.json
@@ -5,10 +5,41 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/logs.txt",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}",
+          "formatter": {
+            "type": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+          }
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "Serilog Demo"
+    }
+  },
   "WeatherConfig": {
     "EndpointUrl": "https://openweathermap.org/data/2.5/find",
     "ApplicationId": "439d4b804bc8187953eb36d2a8c26a02",
-    "Units":  "metric"
+    "Units": "metric"
   },
+  "FrontendUrl": "http://localhost:4200",
   "AllowedHosts": "*"
 }
